--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Mark McCarthy's portfolio-blog
+title: Mark McCarthy
 email: mccarthy17mark[at]gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Data Scientist and Software Developer
