--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ linkedin_username: mark-mccarthy-113b41132
 future: true
 
 # Build settings
+markdown: kramdown
 theme: minima
 #remote_theme: pages-themes/midnight@v0.2.0
 plugins:
