Integration by parts, and lots of formatting

--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,11 @@ minima:
 kramdown:
   parse_block_html: true
 
+header_pages:
+  - about.markdown
+  - posts.md
+  - Tutorials.md
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
